--- a/Assets/Submodulos/Ging1991/package.json
+++ b/Assets/Submodulos/Ging1991/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.ging1991.infraestructura",
-  "version": "1.0.1",
-  "displayName": "Infraestructura",
+  "version": "1.0.2",
+  "displayName": "Ging1991:Infraestructura",
   "description": "Common infrastructure code for Unity projects.",
   "unity": "2020.3",
   "keywords": ["infrastructure", "utilities"],
